--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="header-link link">Studio</a>
+            <a href="./index.html" class="header-link link link_current">Studio</a>
           </li>
 
           <li class="header-item">
@@ -57,7 +57,7 @@
     <section class="hero">
       <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <button type="button" class="hero-button" data-modal-open>Order Service</button>
       </div>
     </section>
     <!-- section 2 -->
@@ -67,7 +67,7 @@
         <ul class="features-list list">
           <li class="fetures-item">
             <div class="features-box">
-              <svg class="features-icon" width="64px" height="64px">
+              <svg class="features-icon">
                 <use href="./images/icons.svg#icon-Group"></use>
               </svg>
             </div>
@@ -80,7 +80,7 @@
 
           <li class="fetures-item">
             <div class="features-box">
-              <svg class="features-icon" width="64px" height="64px">
+              <svg class="features-icon">
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
@@ -93,7 +93,7 @@
 
           <li class="fetures-item">
             <div class="features-box">
-              <svg class="features-icon" width="64px" height="64px">
+              <svg class="features-icon">
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
@@ -106,7 +106,7 @@
 
           <li class="fetures-item">
             <div class="features-box">
-              <svg class="features-icon" width="64px" height="64px">
+              <svg class="features-icon">
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
@@ -187,6 +187,8 @@
       </p>
     </div>
   </footer>
+  <!-- modal -->
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
