--- a/index.html
+++ b/index.html
@@ -314,39 +314,110 @@
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-list">
           <li class="customers-item">
-            <a href="" class="customers-link"></a>
+            <a href="" class="customers-link">
+              <svg class="customers-svg" width="140"  height="56">
+                <use href="./images/icons.svg#icon-group-1"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-item">
-            <a href="" class="customers-link"></a>
+            <a href="" class="customers-link">
+              <svg class="customers-svg" width="140"  height="56">
+                <use href="./images/icons.svg#icon-group-2"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-item">
-            <a href="" class="customers-link"></a>
+            <a href="" class="customers-link">
+              <svg class="customers-svg" width="140"  height="56">
+                <use href="./images/icons.svg#icon-group-3"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-item">
-            <a href="" class="customers-link"></a>
+            <a href="" class="customers-link">
+              <svg class="customers-svg" width="140"  height="56">
+                <use href="./images/icons.svg#icon-group-4"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-item">
-            <a href="" class="customers-link"></a>
+            <a href="" class="customers-link">
+              <svg class="customers-svg" width="140"  height="56">
+                <use href="./images/icons.svg#icon-group-5"></use>
+              </svg>
+            </a>
           </li>
           <li class="customers-item">
-            <a href="" class="customers-link"></a>
+            <a href="" class="customers-link">
+              <svg class="customers-svg" width="140"  height="56">
+                <use href="./images/icons.svg#icon-group-6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
-      <a href="./index.html" class="footer-logo link">
-        Web<span class="footer_logo_span">Studio</span>
-      </a>
-      <p class="footer-license">
-        Increase the flow of customers and sales for your business with
-        digital marketing & growth solutions.
-      </p>
+    <div class="footer-container container">
+      <div class="footer-box">
+        <a href="./index.html" class="footer-logo link">
+          Web<span class="footer_logo_span">Studio</span>
+        </a>
+        <p class="footer-license">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+      <div class="footer-social">
+        <p class="footer-social-text">
+          Social media
+        </p>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin4"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
-  <!-- modal -->
+  
+  <!-- modal window -->
+  <div class="backdrop  is-hidden" data-modal>
+    <div class="modal">
+      <button type="button" class="button-modal-close" data-modal-close>
+        <svg class="button-close-svg" width="8" height="8">
+          <use href="./images/icons.svg#icon-modal-close"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
   <script src="./js/modal.js"></script>
 </body>
 
