--- a/portfolio.html
+++ b/portfolio.html
@@ -23,20 +23,20 @@
           Web<span class="logo-span">Studio</span>
         </a>
         <ul class="header-list list">
-          <li class="header-item ">
+          <li class="header-item">
             <a href="./index.html" class="header-link link">Studio</a>
           </li>
-
+  
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link link">Portfolio</a>
+            <a href="./portfolio.html" class="header-link link link_current">Portfolio</a>
           </li>
-
+  
           <li class="header-item">
             <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
-
+  
       <address class="header-adress">
         <ul class="adress-list list">
           <li class="adress-item">
@@ -174,13 +174,51 @@
     <!--footer-->
   </main>
   <footer class="footer">
-    <div class="container">
-      <a href="./index.html" class="footer-logo link">
-        Web<span class="footer_logo_span">Studio</span>
-      </a>
-      <p class="footer-license">Increase the flow of customers and sales for your business with digital marketing &
-        growth
-        solutions.</p>
+    <div class="footer-container container">
+      <div class="footer-box">
+        <a href="./index.html" class="footer-logo link">
+          Web<span class="footer_logo_span">Studio</span>
+        </a>
+        <p class="footer-license">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+      <div class="footer-social">
+        <p class="footer-social-text">
+          Social media
+        </p>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin4"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
