--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
       </div>
     </section>
   </main>
+  <!-- footer -->
   <footer class="footer">
     <div class="footer-container container">
       <div class="footer-box">
