--- a/portfolio.html
+++ b/portfolio.html
@@ -26,17 +26,17 @@
           <li class="header-item">
             <a href="./index.html" class="header-link link">Studio</a>
           </li>
-  
+
           <li class="header-item">
             <a href="./portfolio.html" class="header-link link link_current">Portfolio</a>
           </li>
-  
+
           <li class="header-item">
             <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
-  
+
       <address class="header-adress">
         <ul class="adress-list list">
           <li class="adress-item">
@@ -79,91 +79,154 @@
         <!--images-->
         <ul class="portfolio-list list">
           <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./images/portfolio1.jpg" alt="Banking App " width="360">
+            <a class="portfolio-link link" href="">
+              <div class="wrapper">
+                <img src="./images/portfolio1.jpg" alt="Banking App " width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-                <h2 class="section-descrip">Banking App Interface Concept</h2>
-                <p class="section-apps">App</p>
+                <h2 class="portfolio-descrip">Banking App Interface Concept</h2>
+                <p class="portfolio-apps">App</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Cashless Payment</h2>
-              <p class="section-apps">Marketing</p>
+                <h2 class="portfolio-descrip">Cashless Payment</h2>
+                <p class="portfolio-apps">Marketing</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio3.jpg" alt="Meditation App" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio3.jpg" alt="Meditation App" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Meditation App</h2>
-              <p class="section-apps">App</p>
+                <h2 class="portfolio-descrip">Meditation App</h2>
+                <p class="portfolio-apps">App</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio5.jpg" alt="Taxi Service" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio5.jpg" alt="Taxi Service" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Taxi Service</h2>
-              <p class="section-apps">Marketing</p>
+                <h2 class="portfolio-descrip">Taxi Service</h2>
+                <p class="portfolio-apps">Marketing</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio6.jpg" alt="Screen Illustrations" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio6.jpg" alt="Screen Illustrations" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Screen Illustrations</h2>
-              <p class="section-apps">Design</p>
+                <h2 class="portfolio-descrip">Screen Illustrations</h2>
+                <p class="portfolio-apps">Design</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio7.jpg" alt="Online Courses" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio7.jpg" alt="Online Courses" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Online Courses</h2>
-              <p class="section-apps">Marketing</p>
+                <h2 class="portfolio-descrip">Online Courses</h2>
+                <p class="portfolio-apps">Marketing</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio8.jpg" alt="Instagram Stories Concept" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio8.jpg" alt="Instagram Stories Concept" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Instagram Stories Concept</h2>
-              <p class="section-apps">Design</p>
+                <h2 class="portfolio-descrip">Instagram Stories Concept</h2>
+                <p class="portfolio-apps">Design</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio9.jpg" alt="Organic Food" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio9.jpg" alt="Organic Food" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Organic Food</h2>
-              <p class="section-apps">Web Site</p>
+                <h2 class="portfolio-descrip">Organic Food</h2>
+                <p class="portfolio-apps">Web Site</p>
               </div>
             </a>
           </li>
 
           <li class="portfolio-item">
             <a href="" class="portfolio-link link">
-              <img src="./images/portfolio4.jpg" alt="Fresh Coffee" width="360">
+              <div class="wrapper">
+                <img src="./images/portfolio4.jpg" alt="Fresh Coffee" width="360">
+                <div class="text-overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
+                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
+                  reiciendis esse cupiditate.
+                </div>
+              </div>
               <div class="items-container">
-              <h2 class="section-descrip">Fresh Coffee</h2>
-              <p class="section-apps">Web Site</p>
+                <h2 class="portfolio-descrip">Fresh Coffee</h2>
+                <p class="portfolio-apps">Web Site</p>
               </div>
             </a>
           </li>
