--- a/portfolio.html
+++ b/portfolio.html
@@ -82,11 +82,11 @@
             <a class="portfolio-link link" href="">
               <div class="wrapper">
                 <img src="./images/portfolio1.jpg" alt="Banking App " width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
                   animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
                   reiciendis esse cupiditate.
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Banking App Interface Concept</h2>
