--- a/portfolio.html
+++ b/portfolio.html
@@ -83,9 +83,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio1.jpg" alt="Banking App " width="360">
                 <p class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
               </div>
               <div class="items-container">
@@ -100,9 +98,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
@@ -117,9 +113,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio3.jpg" alt="Meditation App" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
@@ -134,9 +128,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio5.jpg" alt="Taxi Service" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
@@ -151,9 +143,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio6.jpg" alt="Screen Illustrations" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
@@ -168,9 +158,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio7.jpg" alt="Online Courses" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
@@ -185,9 +173,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio8.jpg" alt="Instagram Stories Concept" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
@@ -202,9 +188,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio9.jpg" alt="Organic Food" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
@@ -219,9 +203,7 @@
               <div class="wrapper">
                 <img src="./images/portfolio4.jpg" alt="Fresh Coffee" width="360">
                 <div class="text-overlay">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia molestiae blanditiis nihil ratione
-                  animi magnam sunt deleniti quisquam incidunt, iusto id magni iure velit provident facere explicabo
-                  reiciendis esse cupiditate.
+                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </div>
               </div>
               <div class="items-container">
