--- a/portfolio.html
+++ b/portfolio.html
@@ -97,9 +97,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Cashless Payment</h2>
@@ -112,9 +112,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio3.jpg" alt="Meditation App" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Meditation App</h2>
@@ -127,9 +127,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio5.jpg" alt="Taxi Service" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Taxi Service</h2>
@@ -142,9 +142,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio6.jpg" alt="Screen Illustrations" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Screen Illustrations</h2>
@@ -157,9 +157,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio7.jpg" alt="Online Courses" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Online Courses</h2>
@@ -172,9 +172,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio8.jpg" alt="Instagram Stories Concept" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Instagram Stories Concept</h2>
@@ -187,9 +187,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio9.jpg" alt="Organic Food" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Organic Food</h2>
@@ -202,9 +202,9 @@
             <a href="" class="portfolio-link link">
               <div class="wrapper">
                 <img src="./images/portfolio4.jpg" alt="Fresh Coffee" width="360">
-                <div class="text-overlay">
+                <p class="text-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="items-container">
                 <h2 class="portfolio-descrip">Fresh Coffee</h2>
