--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
         <!--images-->
         <ul class="portfolio-list list">
           <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
+            <a class="portfolio-link link" href="#">
               <div class="wrapper">
                 <img src="./images/portfolio1.jpg" alt="Banking App " width="360">
                 <p class="text-overlay">
